--- a/BattleTank_UU/BattleTank_UU.uproject
+++ b/BattleTank_UU/BattleTank_UU.uproject
@@ -7,7 +7,10 @@
 		{
 			"Name": "BattleTank_UU",
 			"Type": "Runtime",
-			"LoadingPhase": "Default"
+			"LoadingPhase": "Default",
+			"AdditionalDependencies": [
+				"Engine"
+			]
 		}
 	]
 }
